--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "planning-poker",
+  "homepage": "https://cristijigau.github.io/TaskGambler",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,14 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "classnames": "^2.5.1",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
